k8s/apps/bookie/bookie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookie
  namespace: bookie-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookie
  template:
    metadata:
      labels:
        app: bookie
    spec:
      containers:
        - name: bookie
          image: baraziza/bookie:latest
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - containerPort: 5000
