k8s/apps/bookie/bookie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookie-service
spec:
  selector:
    app: bookie
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
